--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-26 14:59:03
-# Total rules: 3730
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-27 09:59:35
+# Total rules: 3807
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -7,6 +7,7 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .682a5845.b-cdn.net
@@ -25,11 +26,11 @@
 .a.stat.xiaomi.com
 .a.tanx.com
 .a0.app.xiaomi.com
-.a125375509.cdn.optimizely.com
 .a8bea9eb5d.com
 .aan.amazon.com
 .abtest-ch.snssdk.com
 .abtest.alibaba.com
+.ac.dun.163.com
 .ac.mmstat.com
 .accscdn.m.taobao.com
 .acjs.aliyun.com
@@ -42,12 +43,14 @@
 .ad-1258444056.cos.accelerate.myqcloud.com
 .ad-creatives-public.commondatastorage.googleapis.com
 .ad-serve.b-cdn.net
+.ad.163.com
 .ad.3.cn
 .ad.api.3g.youku.com
 .ad.api.mobile.youku.com
 .ad.browser.qq.com
 .ad.caiyunapp.com
 .ad.docer.wps.cn
+.ad.eporner.com
 .ad.intl.xiaomi.com
 .ad.m.iqiyi.com
 .ad.mi.com
@@ -69,6 +72,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -99,6 +103,9 @@
 .adebus.oss-cn-shenzhen.aliyuncs.com
 .adfilter.imtt.qq.com
 .adgame.waimai.meituan.com
+.adgeo.163.com
+.adgeo.corp.163.com
+.adimg.163.com
 .adimg.mobile.sina.cn
 .adimg.uve.weibo.com
 .adinf.cp11.ott.cibntv.net
@@ -113,6 +120,7 @@
 .admarvel.s3.amazonaws.com
 .admobile.top
 .admost-banner.b-cdn.net
+.admusicpic.music.126.net
 .adping.qq.com
 .adpm.app.qq.com
 .adpublisher.s3.amazonaws.com
@@ -142,6 +150,7 @@
 .ads.google.com
 .ads.imgur.com
 .ads.mozilla.org
+.ads.music.126.net
 .ads.nytimes.com
 .ads.prd.ie.internal.unity3d.com
 .ads.samsung.com
@@ -186,7 +195,6 @@
 .adsmind.gdtimg.com
 .adsmind.tc.qq.com
 .adsninja.b-cdn.net
-.adsninjacdn.b-cdn.net
 .adsolution.imtt.qq.com
 .adsqqclick.qq.com
 .adsrich.qq.com
@@ -232,6 +240,7 @@
 .aegis.qq.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -262,15 +271,15 @@
 .amdc.alipay.com
 .amdcopen.m.taobao.com
 .amplitude.com
-.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
 .analy.qq.com
 .analytics-alv.google.com
-.analytics-digit-in.cdn.ampproject.org
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
+.analytics.126.net
+.analytics.163.com
 .analytics.21cn.com
 .analytics.adjust.net.in
 .analytics.archive.org
@@ -293,9 +302,11 @@
 .analytics.unity3d.com
 .analytics.us.archive.org
 .analytics.us.tiktok.com
+.analytics.ws.126.net
 .analytics.zhihu.com
 .analyticsengine.s3.amazonaws.com
 .android-lrcresource.wps.cn
+.android.push.126.net
 .androidtvchannels-pa.googleapis.com
 .androidtvwatsonfe-pa.googleapis.com
 .anquan.baidu.com
@@ -338,6 +349,7 @@
 .apoll.m.taobao.com
 .app-analytics-services.com
 .app-measurement.com
+.app-monitor.ele.me
 .app.adjust.net.in
 .app.bugsnag.com
 .app.chat.xiaomi.net
@@ -359,6 +371,7 @@
 .applogios.uc.cn
 .appsflyersdk.com
 .appsupport.qq.com
+.appversion.115.com
 .apsrgeo.amap.com
 .arduino.uk.eu.org
 .arnoldgloverruss58.myshopify.com
@@ -463,6 +476,8 @@
 .bn4sch101123110.wns.windows.com
 .bn4sch101123202.wns.windows.com
 .bn4sch102110124.wns.windows.com
+.bobo.163.com
+.bobo.corp.163.com
 .bole.shangshufang.ksosoft.com
 .books-analytics-events.apple.com
 .boscdn.bpc.baidu.com
@@ -516,7 +531,6 @@
 .cdn-ads.oss-cn-shanghai.aliyuncs.com
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn.ark.qq.com
-.cdn.cookielaw.org
 .cdn.onesignal.com
 .cdn.puata.info
 .cdn.tanx.com
@@ -545,8 +559,13 @@
 .click.tz.simba.taobao.com
 .click.uve.mobile.sina.cn
 .click.uve.weibo.com
+.client-api.ele.me
 .client.show.qq.com
 .client.video.ucweb.com
+.clientlog.music.163.com
+.clientlog3.music.163.com
+.clientlogdep.music.163.com
+.clientlogsf.music.163.com
 .clientmetrics-pa.googleapis.com
 .clients1.google.com
 .clog.miguvideo.com
@@ -564,6 +583,7 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cnzz.mmstat.com
 .collect.alipay.com
@@ -595,6 +615,7 @@
 .core-apps.b-cdn.net
 .corp.sts.microsoft.com
 .corpext.msitadfs.glbdns2.microsoft.com
+.count.mail.163.com
 .count.video.sina.com.cn
 .counter.ksosoft.com
 .counter.sina.com.cn
@@ -609,7 +630,9 @@
 .cpucdn.baidu.com
 .cpux.gmud.top
 .crab.baidu.com
+.crash.163.com
 .crash2.zhihu.com
+.crashlytics.163.com
 .crashlytics.com
 .crashlyticsreports-pa.googleapis.com
 .cre-dp.sina.cn
@@ -624,8 +647,6 @@
 .csp-reporting.cloudflare.com
 .cstm.baidu.com
 .ctobsnssdk.com
-.cu-cn-north00001.gala.convection.cn
-.cu-cn-north00002.gala.convection.cn
 .customerevents.dradis.netflix.com
 .customerevents.netflix.com
 .cxense.com
@@ -1991,6 +2012,7 @@
 .deisd5o6v8rgq.cloudfront.net
 .dek5iqd53g59a.cloudfront.net
 .demkc32bq01ah.cloudfront.net
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
 .dev-push.m.youku.com
@@ -2037,7 +2059,6 @@
 .diagnostics.support.microsoft.com
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dic9vgwbkxd8r.cloudfront.net
-.didna.b-cdn.net
 .dig.bdurl.net
 .digital-ads.s3.amazonaws.com
 .dihutyaiafuhr.cloudfront.net
@@ -2311,6 +2332,7 @@
 .dzv1ekshu2vbs.cloudfront.net
 .dzxr711a4yw31.cloudfront.net
 .dzxxxg6ij9u99.cloudfront.net
+.e-p4p.163.com
 .e.baidu.com
 .e.kuaishou.cn
 .e.kuaishou.com
@@ -2327,6 +2349,7 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
+.edgecast-vod.yimg.com
 .eduad.baidu.com
 .ef-dongfeng.tanx.com
 .ef.opendsp.tanx.com
@@ -2358,6 +2381,7 @@
 .eventcollectorv2-1131000179.us-east-1.elb.amazonaws.com
 .eventrecorder.cm.bloomberg.com
 .events-collector.spot.im
+.events.bsky.app
 .events.framer.com
 .events.iap.unity3d.com
 .events.mapbox.com
@@ -2373,6 +2397,8 @@
 .f10.baidu.com
 .f11.baidu.com
 .f12.baidu.com
+.fa.163.com
+.fa.corp.163.com
 .facai383.oss-cn-guangzhou.aliyuncs.com
 .familygiftlove.myshopify.com
 .fav.simba.taobao.com
@@ -2423,9 +2449,13 @@
 .fusion.qq.com
 .fw.qq.com
 .fxgate.baidu.com
+.g.163.com
 .g.baidu.com
 .g.click.taobao.com
+.g.corp.163.com
 .g.tbcdn.cn
+.g1.163.com
+.g1.corp.163.com
 .ga.clearbit.com
 .gak.webtoons.com
 .gallery.pandora.xiaomi.com
@@ -2436,6 +2466,7 @@
 .gamecenter.iqiyi.com
 .gamex.mobile.youku.com
 .gator.volces.com
+.gb.corp.163.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -2478,6 +2509,7 @@
 .goutong.baidu.com
 .gouwu.qq.com
 .gqjppj.rentcafe.com.cdn.cloudflare.net
+.grand.ele.me
 .gslbali.ximalaya.com
 .gsp1.baidu.com
 .gtm.tipranks.com
@@ -2503,6 +2535,7 @@
 .h-adashx4ae.ut.taobao.com
 .h-adashx4yt.ut.taobao.com
 .h5.game.iqiyi.com
+.haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
 .hao.uc.cn
 .hbid.ams3.cdn.digitaloceanspaces.com
@@ -2602,8 +2635,10 @@
 .httpdns.baidu.com
 .httpdns.bilivideo.com
 .httpdns.browser.miui.com
+.httpdns.c.163.com
 .httpdns.kg.qq.com
 .httpdns.meituan.com
+.httpdns.music.163.com
 .httpdns.n.netease.com
 .httpdnsvip.meituan.com
 .httpring.qq.com
@@ -2632,6 +2667,9 @@
 .iad-06.braze.com
 .iad-08.braze.com
 .iad.apple.com
+.iadmatvideo.nosdn.127.net
+.iadmusicmat.music.126.net
+.iadmusicmatvideo.music.126.net
 .iads.unity3d.com
 .iadsdk.apple.com
 .iadworkbench.apple.com
@@ -2670,14 +2708,19 @@
 .imagev2.tx.xmcdn.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
+.img1.126.net
 .img1.gtimg.com
 .img1.pcfg.cache.wps.cn
 .img1.sj.qq.com
+.img2.126.net
+.img3.126.net
 .imgaliyun.res.mgtv.com
 .imgstat.baidu.com
 .improving.duckduckgo.com
+.in.yimg.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
@@ -2699,6 +2742,9 @@
 .ios-informationplatform.wps.cn
 .ip.geo.iqiyi.com
 .ip.taobao.com
+.ip.ws.126.net
+.ir.mail.163.com
+.irpmt.mail.163.com
 .isdspeed.qq.com
 .itsdata.map.baidu.com
 .iwallet-1258175138.file.myqcloud.com
@@ -2882,6 +2928,7 @@
 .mihoutao1868.github.io
 .milink.pandora.xiaomi.com
 .mime.baidu.com
+.mimg.126.net
 .mine.baidu.com
 .minfo.wps.cn
 .mini2015.qq.com
@@ -2908,6 +2955,7 @@
 .mobads.baidu.com
 .mobaliyun.res.mgtv.com
 .mobantong.oss-cn-hangzhou.aliyuncs.com
+.mobile-pubt.ele.me
 .mobile.ximalaya.com
 .mobileads.google.com
 .mobileanalytics.us-east-1.amazonaws.com
@@ -2946,6 +2994,7 @@
 .myes.youku.com
 .myhandshops.myshopify.com
 .mythdev.b-cdn.net
+.n.3g.163.com
 .nadvideo2.baidu.com
 .nativead.s3.amazonaws.com
 .nbsdk-baichuan.alicdn.com
@@ -2953,8 +3002,13 @@
 .ndct-data.video.iqiyi.com
 .neirong.baidu.com
 .net.mydays.de
+.netapm.music.163.com
 .news.mpush.qq.com
+.news.push.126.net
 .newspush.sinajs.cn
+.newton-api.ele.me
+.nex.163.com
+.nex.corp.163.com
 .nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
@@ -2974,16 +3028,17 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nw-umwatson.events.data.microsoft.com
-.o.isx.unity3d.com
-.o209266.ingest.us.sentry.io
+.nytadvertising.nytimes.com
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
+.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
+.oimsgad.qq.com
 .omgid.qq.com
 .omgmta1.qq.com
 .omni.istockphoto.com
@@ -3013,6 +3068,7 @@
 .ott.v1.data.mgtv.com
 .outlookads.live.com
 .p.alimama.com
+.p.controld.com
 .p.hentaiforce.net
 .p.imgur.com
 .p.store.qq.com
@@ -3065,12 +3121,14 @@
 .perf-events.cloud.unity3d.com
 .permutive.com
 .pfp.sina.com.cn
+.pg-ad-b1.nosdn.127.net
 .pgdt.gtimg.cn
 .pgdt.gtimg.com
 .pglstatp-toutiao.com
 .phs.tanx.com
 .pimlog.baidu.com
 .pindao.huoban.taobao.com
+.pingfore.qq.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3092,10 +3150,10 @@
 .policy.jd.com
 .policy.video.iqiyi.com
 .popcashjs.b-cdn.net
+.popme.163.com
 .pos.baidu.com
 .ppurifier.game.xiaomi.com
 .pr.nss.netease.com
-.prd-lender.cdp.internal.unity3d.com
 .predataclient.b-cdn.net
 .presence.teams.live.com
 .presentationtracking.netflix.com
@@ -3125,6 +3183,7 @@
 .push.m.youku.com
 .push.music.baidu.com
 .push.wps.cn
+.push.yuedu.163.com
 .pvstat.html5.qq.com
 .px-intl.ucweb.com
 .px.effirst.com
@@ -3138,18 +3197,24 @@
 .qianclick.baidu.com
 .qos.video.yimg.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
+.qring-tms.qq.com
 .qss-client.qq.com
 .qvid2.b-cdn.net
 .qzs.gdtimg.com
 .r.3hentai.net
 .r.browser.miui.com
+.r.mail.163.com
 .r.release.qq.com
 .ra.gtimg.com
 .ra10.xyz
 .rad.live.com
 .rad.microsoft.com
+.rads.stackoverflow.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rdstat.tanx.com
 .re.m.taobao.com
 .re.taobao.com
@@ -3182,6 +3247,7 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3199,6 +3265,7 @@
 .rs.sinajs.cn
 .rs1.qq.com
 .rs2.qq.com
+.rtbasia.com
 .rubiconproject.com
 .rum.condenastdigital.com
 .s-adashx.ut.uc.cn
@@ -3255,6 +3322,7 @@
 .security.browser.miui.com
 .seedapp-creative.s3.amazonaws.com
 .sentry.d.xiaomi.net
+.sentry.music.163.com
 .server.iad.liveperson.net
 .service.danmu.youku.com
 .sessions.bugsnag.com
@@ -3273,6 +3341,7 @@
 .share.baidu.com
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
+.show-msgch.qq.com
 .showwxml.qq.com
 .shukriya90.com
 .shy-boat-90ce.jiko728928922.workers.dev
@@ -3350,6 +3419,7 @@
 .stat.tpns.tencent.com
 .stat.u.sb
 .stat.v.baidu.com
+.stat.ws.126.net
 .stat.y.qq.com
 .stat.youku.com
 .static-addtoany-com.cdn.ampproject.org
@@ -3390,6 +3460,7 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
+.survey.china.alibaba.com
 .svibeacon.onezapp.com
 .swa.gtimg.com
 .sworkitads.herokuapp.com
@@ -3444,9 +3515,11 @@
 .textlink.simba.taobao.com
 .thind-gke-euw.prd.data.corp.unity3d.com
 .tianqin.qq.com
+.timejs.game.163.com
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.video.qq.com
 .tj.youzanyun.com
@@ -3547,6 +3620,7 @@
 .ucus.ucweb.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -3572,6 +3646,7 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unityads.unity3d.com
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -3624,13 +3699,13 @@
 .vs8.gzcu.u3.ucweb.com
 .vv.video.qq.com
 .w.gdown.baidu.com
-.w.isx.unity3d.com
 .w.m.taobao.com
 .w.x.baidu.com
 .w2g-ping.b-cdn.net
 .wa.gtimg.com
 .wan.youku.com
 .wangmeng.baidu.com
+.wanproxy.127.net
 .wap.mpush.qq.com
 .wap3.ucweb.com
 .wapwbclick.mobile.sina.cn
@@ -3647,12 +3722,12 @@
 .web-ivcbrasil-tag.s3.us-west-2.amazonaws.com
 .webcast-ppx.snssdk.com
 .website-security.rapidssl.com
+.webstat.ws.126.net
 .weishi.baidu.com
 .widget.weibo.com
 .win10.ipv6.microsoft.com
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
-.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wisepush.video.baidu.com
 .wkclick.baidu.com
@@ -3709,6 +3784,8 @@
 .yoo.gtimg.com
 .youku-acs.m.taobao.com
 .ys2000.cdn.bcebos.com
+.yt-adp.nosdn.127.net
+.yt-adp.ws.126.net
 .yt.mmstat.com
 .yuedu.iqiyi.com
 .yun-hl.3g.qq.com
