--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-28 10:38:08
-# Total rules: 4111
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-28 16:36:31
+# Total rules: 4170
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -45,14 +45,17 @@
 .ad-serve.b-cdn.net
 .ad.163.com
 .ad.3.cn
+.ad.360.cn
 .ad.api.3g.youku.com
 .ad.api.mobile.youku.com
 .ad.browser.qq.com
 .ad.caiyunapp.com
+.ad.dev.360.cn
 .ad.docer.wps.cn
 .ad.eporner.com
 .ad.india.xiaomi.com
 .ad.intl.xiaomi.com
+.ad.jia.360.cn
 .ad.m.iqiyi.com
 .ad.mi.com
 .ad.mobile.youku.com
@@ -127,6 +130,7 @@
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
 .adnet.qq.com
+.adp.cnki.net
 .adping.qq.com
 .adpm.app.qq.com
 .adpublisher.s3.amazonaws.com
@@ -187,6 +191,7 @@
 .adse.ximalaya.com
 .adsebs.ximalaya.com
 .adsense.html5.qq.com
+.adsensecustomsearchads.com
 .adserver-2084671375.us-east-1.elb.amazonaws.com
 .adserver.bing.com
 .adservice.google.com
@@ -343,6 +348,7 @@
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
 .api.setting.intl.miui.com
+.api.shuaji.360.cn
 .api.sprig.com
 .api.stacksocial.com
 .api.uca.cloud.unity3d.com
@@ -515,6 +521,8 @@
 .c.baidu.com
 .c.gj.qq.com
 .c.live.com
+.c.mse.360.cn
+.c.sayhi.360.cn
 .c.uaa.iqiyi.com
 .c.wired.com
 .c.yes.youku.com
@@ -612,6 +620,7 @@
 .concert.io
 .concertads-configs.vox-cdn.com
 .conf.international.baidu.com
+.conf.wifi.360.cn
 .config-api.internet.apps.samsung.com
 .config.ab.qq.com
 .config.uca.cloud.unity3d.com
@@ -623,6 +632,9 @@
 .coordinator.cm.bloomberg.com
 .copilot-telemetry.githubusercontent.com
 .core-apps.b-cdn.net
+.coreads-console.cambridge.org
+.coreads-static.cambridge.org
+.coreads.cambridge.org
 .corp.sts.microsoft.com
 .corpext.msitadfs.glbdns2.microsoft.com
 .count.mail.163.com
@@ -2028,6 +2040,7 @@
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
 .dev-push.m.youku.com
+.dev.visualwebsiteoptimizer.com
 .devgottia.github.io
 .device-metrics-us-2.amazon.com
 .device-metrics-us.amazon.com
@@ -2198,6 +2211,7 @@
 .dorangesource.alicdn.com
 .doubleclick-cn.net
 .doubleclick.net
+.down.360.cn
 .download-stats.mozilla.org
 .download.bav.baidu.com
 .download.sd.baidu.com
@@ -2479,6 +2493,7 @@
 .game.weibo.cn
 .game.weibo.com
 .game.xiaomi.com
+.gamebox.360.cn
 .gamecenter.iqiyi.com
 .gamex.mobile.youku.com
 .gator.volces.com
@@ -2506,6 +2521,7 @@
 .gjtrack.uc.cn
 .gjtrack.ucweb.com
 .gk.sina.cn
+.glassmoni.researchgate.net
 .gld.samsungosp.com
 .glitter.services.disqus.com
 .global-staticplat.cdn.bcebos.com
@@ -2550,8 +2566,10 @@
 .h-adashx.ut.youku.com
 .h-adashx4ae.ut.taobao.com
 .h-adashx4yt.ut.taobao.com
+.h5.mse.360.cn
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
+.hao.360.cn
 .hao.uc.cn
 .hbid.ams3.cdn.digitaloceanspaces.com
 .hc-ssp.sm.cn
@@ -2774,7 +2792,10 @@
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
+.jads.co
 .janapi.jd.com
+.jiagu.360.cn
+.jiathis.com
 .jiayi1.oss-cn-shanghai.aliyuncs.com
 .jiguang.cn
 .jingjia.qq.com
@@ -2805,9 +2826,11 @@
 .l.youku.com
 .lb.gtimg.com
 .lc-push.zhihu.com
+.leak.360.cn
 .lf3-data.volccdn.com
 .lgsmartad.com
 .lgtvcommon.com
+.lianmeng.360.cn
 .libfre.obs.cn-east-3.myhuaweicloud.com
 .linkeye.ximalaya.com
 .links.services.disqus.com
@@ -2976,6 +2999,7 @@
 .mobile.ximalaya.com
 .mobileads.google.com
 .mobileanalytics.us-east-1.amazonaws.com
+.mobilem.360.cn
 .mobilemsg.youku.com
 .mobopay.baidu.com
 .mobwsa.ximalaya.com
@@ -2999,6 +3023,7 @@
 .msg.youku.com
 .msite.baidu.com
 .msmetrics.ws.sonos.com
+.msoftdl.360.cn
 .mssdk.bytedance.com
 .mssdk.volces.com
 .mssdk.zijieapi.com
@@ -3023,6 +3048,7 @@
 .neirong.baidu.com
 .net.mydays.de
 .netapm.music.163.com
+.newrelic.com
 .news.push.126.net
 .newspush.sinajs.cn
 .newton-api.ele.me
@@ -3084,6 +3110,7 @@
 .osfota.cdn.aliyun.com
 .oth.eve.qq.com
 .outlookads.live.com
+.outreach.crossref.org
 .p.alimama.com
 .p.controld.com
 .p.hentaiforce.net
@@ -3118,6 +3145,7 @@
 .pangolin-sdk-toutiao1.com
 .pangolin.snssdk.com
 .paopao.iqiyi.com
+.papi.look.360.cn
 .par02p.wns.windows.com
 .parking.godaddy.com
 .parsely.com
@@ -3179,6 +3207,7 @@
 .predataclient.b-cdn.net
 .presence.teams.live.com
 .presentationtracking.netflix.com
+.privacy-center.org
 .prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
@@ -3197,6 +3226,7 @@
 .pubgw.api.ddxq.mobi
 .public.gdtimg.com
 .publisher-assets.spot.im
+.pubmatic.com
 .puds.test.uae.uc.cn
 .puds.ucweb.com
 .puma-api.iqiyi.com
@@ -3214,6 +3244,7 @@
 .px-intl.ucweb.com
 .px.ucweb.com
 .px.wpk.quark.cn
+.pyk.in-neo.cn
 .qapm.baidu.com
 .qc.arstechnica.com
 .qc.wired.com
@@ -3227,6 +3258,7 @@
 .qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
+.qurl.f.360.cn
 .qvb.qcloud.com
 .qvid2.b-cdn.net
 .qzs.gdtimg.com
@@ -3234,6 +3266,9 @@
 .r.3hentai.net
 .r.mail.163.com
 .r.release.qq.com
+.r1.visualwebsiteoptimizer.com
+.r2.visualwebsiteoptimizer.com
+.r3.visualwebsiteoptimizer.com
 .ra.gtimg.com
 .ra10.xyz
 .rad.live.com
@@ -3294,8 +3329,10 @@
 .rubiconproject.com
 .rum.condenastdigital.com
 .s-adashx.ut.uc.cn
+.s.360.cn
 .s.baidu.com
 .s.img.mix.sina.com.cn
+.s.so.360.cn
 .sa.api.intl.miui.com
 .sa.sina.cn
 .safebrowsing.urlsec.qq.com
@@ -3325,6 +3362,7 @@
 .sclick.baidu.com
 .scribe.twitter.com
 .sd-tagging.azurefd.net
+.sdk.look.360.cn
 .sdk.m.youku.com
 .sdkapp.mobile.sina.cn
 .sdkapp.uve.weibo.com
@@ -3332,6 +3370,7 @@
 .sdkconfig.video.qq.com
 .sdkconfig.xiaomi.com
 .sdkinit.taobao.com
+.se.360.cn
 .sea.napi.ucweb.com
 .seal.digicert.com
 .seal.globalsign.com
@@ -3362,9 +3401,12 @@
 .shadu.baidu.com
 .shaquevip.oss-cn-zhangjiakou.aliyuncs.com
 .share.baidu.com
+.sharethis.com
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
+.shouji.360.cn
 .show-msgch.qq.com
+.show.look.360.cn
 .showwxml.qq.com
 .shukriya90.com
 .shy-boat-90ce.jiko728928922.workers.dev
@@ -3375,6 +3417,7 @@
 .simba.m.taobao.com
 .singular.net
 .site.u-mob.cn
+.site24x7rum.eu
 .sjarvis.taobao.com
 .skdisplay.jd.com
 .slb-p2p.vcloud.ks-live.com
@@ -3404,6 +3447,7 @@
 .sobartop.baidu.com
 .sofire.baidu.com
 .sofire.bdstatic.com
+.soft.data.weather.360.cn
 .somni.istockphoto.com
 .soup.v.qq.com
 .sp-mms.weather.com
@@ -3436,6 +3480,7 @@
 .star-seo.oss-ap-northeast-1.aliyuncs.com
 .starkgame.zijieapi.com
 .stat.alibaba.com
+.stat.m.360.cn
 .stat.m.jd.com
 .stat.simba.taobao.com
 .stat.tpns.gz2.tencent.com
@@ -3494,6 +3539,7 @@
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
 .sxeimx.mydays.de
 .syncplusconfig.s3.amazonaws.com
+.syndicatedsearch.goog
 .syndication-o.twitter.com
 .syndication.twitter.com
 .sys.miui.com
@@ -3541,6 +3587,7 @@
 .test.activity.windows.com
 .test.ott.youku.com
 .textlink.simba.taobao.com
+.tf.360.cn
 .thind-gke-euw.prd.data.corp.unity3d.com
 .tianqin.qq.com
 .tianwenca.com
@@ -3663,6 +3710,7 @@
 .un-acs.youku.com
 .unibotscdn.b-cdn.net
 .unidesk.alicdn.com
+.union.360.cn
 .union.baidu.com
 .union.discuz.qq.com
 .union.gdtimg.com
@@ -3726,6 +3774,7 @@
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
 .wa.gtimg.com
+.wan.360.cn
 .wan.youku.com
 .wangmeng.baidu.com
 .wanproxy.127.net
@@ -3767,6 +3816,7 @@
 .wwads.cn
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .wxaintpcos.wxqcloud.qq.com.cn
 .wxs.qq.com
@@ -3816,6 +3866,7 @@
 .zhishituanyuanji.cdn.bcebos.com
 .zhstatic.zhihu.com
 .znsv.baidu.com
+.zoosnet.net
 .zqtk.net
 .zt.jd.com
 .ztd.dds.microsoft.com
@@ -3826,6 +3877,7 @@
 ac.dun.163yun.com
 acfeedbackws.icloud.com
 acstatic-dun.126.net
+act.commercial.shouji.360.cn
 ad-h5-cdn.soulapp.cn
 ad-h5-station-cdn.soulapp.cn
 ad-r.soulapp.cn
@@ -3834,6 +3886,9 @@ ad-stat.ksosoft.com
 ad.21cn.com
 ad.alimama.com
 ad.bn.netease.com
+ad.gamebox.360.cn
+ad.iot.360.cn
+adapi.shouji.360.cn
 adashx.ut.ele.me
 adavideo.baidu.com
 adlog.vivo.com.cn
@@ -3854,6 +3909,7 @@ advert.lx.netease.com
 adx.alimama.com
 adxlog.vivo.com.cn
 afdconf.baidu.com
+aicleaner.shouji.360.cn
 amap-aos-info-nogw.amap.com
 amdc-sibling.alipay.com.cn
 amdc.m.youku.com
@@ -3897,6 +3953,7 @@ cloan.amap.com
 cm.dmp.sina.cn
 cm.l.qq.com
 cnc.fe01.lg.xiaomi.com
+commercial.shouji.360.cn
 config-p2p-other.vcloud.ks-live.com
 contactapi.micloud.xiaomi.net
 controller.intl.xiaomi.com
@@ -3952,6 +4009,7 @@ httpdns.browser.miui.com
 httpdns.volces.com
 huawei.facebook.com
 huichuan-mc.sm.cn
+huodong.ios.shouji.360.cn
 huodong.xiaomi.com
 huosai.xiaomi.com
 i.xiaomi.com
@@ -3999,6 +4057,7 @@ mob.bz.mgtv.com
 monitor-stsdk.vivo.com.cn
 mp.huangye.miui.com
 mpush-api.aliyun.com
+msg.shouji.360.cn
 msmetrics-test.ws.sonos.com
 mssp.baidu.com
 mtrace.amap.com
