--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-28 16:36:31
-# Total rules: 4170
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-29 09:27:02
+# Total rules: 4276
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -27,11 +27,13 @@
 .a0.app.xiaomi.com
 .a1.itc.cn
 .a8bea9eb5d.com
+.a8clk.macpaw.com
 .aan.amazon.com
 .abtest-ch.snssdk.com
 .abtest.alibaba.com
 .ac.dun.163.com
 .ac.mmstat.com
+.ac3.msn.com
 .accscdn.m.taobao.com
 .acjs.aliyun.com
 .acookie.alimama.com
@@ -110,6 +112,7 @@
 .addata.jd.com
 .ade-rtb.netease.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
+.adevents.msn.com
 .adgame.waimai.meituan.com
 .adgeo.163.com
 .adgeo.corp.163.com
@@ -129,6 +132,7 @@
 .admobile.top
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
+.adncdnend.azureedge.net
 .adnet.qq.com
 .adp.cnki.net
 .adping.qq.com
@@ -156,9 +160,11 @@
 .ads.95516.com
 .ads.bing.com
 .ads.bloomberg.com
+.ads.eu.msn.com
 .ads.google.com
 .ads.imgur.com
 .ads.mozilla.org
+.ads.msn.com
 .ads.music.126.net
 .ads.nytimes.com
 .ads.prd.ie.internal.unity3d.com
@@ -173,6 +179,8 @@
 .ads.xiaomi.com
 .ads.yimg.com
 .ads.youtube.com
+.ads1.msn.com
+.ads2.msn.com
 .ads3-normal-hl.zijieapi.com
 .ads3-normal-lf.zijieapi.com
 .ads3-normal-lq.zijieapi.com
@@ -221,6 +229,7 @@
 .adstore-index-1252524079.file.myqcloud.com
 .adsview.qq.com
 .adsview2.qq.com
+.adsyndication.msn.com
 .adtago.s3.amazonaws.com
 .adtechvideo.s3.amazonaws.com
 .adtrack-intl.ucweb.com
@@ -231,6 +240,7 @@
 .adv.sec.intl.miui.com
 .adv.sec.miui.com
 .adver.qq.com
+.advertiseonbing.azureedge.net
 .advertising-api-eu.amazon.com
 .advertising-api-fe.amazon.com
 .advertising-api.amazon.com
@@ -260,6 +270,8 @@
 .afpmm.alicdn.com
 .afpssp.alimama.com
 .afptrack.alimama.com
+.agent.ap1.datadoghq.com
+.agent.datadoghq.com
 .agoodm.m.taobao.com
 .ahoy-internal-ads-hv.b-cdn.net
 .ai.m.taobao.com
@@ -289,6 +301,8 @@
 .an.facebook.com
 .analy.qq.com
 .analytics-alv.google.com
+.analytics-consent-manager-v2-prod.azureedge.net
+.analytics-consent-manager.azureedge.net
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
 .analytics.126.net
@@ -307,6 +321,8 @@
 .analytics.live.com
 .analytics.map.qq.com
 .analytics.meituan.net
+.analytics.msn.com
+.analytics.msnbc.msn.com
 .analytics.s3.amazonaws.com
 .analytics.snssdk.com
 .analytics.tiktok.com
@@ -317,6 +333,8 @@
 .analytics.us.tiktok.com
 .analytics.ws.126.net
 .analytics.zhihu.com
+.analytics2-3-meride-tv.akamaized.net
+.analytics2-meride-tv.akamaized.net
 .analyticsengine.s3.amazonaws.com
 .android-lrcresource.wps.cn
 .android.push.126.net
@@ -385,6 +403,7 @@
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
+.arc1.msn.com
 .arduino.uk.eu.org
 .arnoldgloverruss58.myshopify.com
 .as.baidu.com
@@ -514,18 +533,54 @@
 .buluo.qq.com
 .business-api.tiktok.com
 .bzclk.baidu.com
+.c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
+.c.msn.com
+.c.my.msn.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
@@ -534,6 +589,7 @@
 .cams.xvideos.com
 .capture.condenastdigital.com
 .carbonads.com
+.catalog.video.msn.com
 .cb.baidu.com
 .cbjs.baidu.com
 .cbjslog.baidu.com
@@ -545,6 +601,7 @@
 .cdj-dap.s3-ap-northeast-1.amazonaws.com
 .cdn-ads.oss-cn-shanghai.aliyuncs.com
 .cdn-bongdadem-net.cdn.ampproject.org
+.cdn-ketchapp.akamaized.net
 .cdn.ark.qq.com
 .cdn.onesignal.com
 .cdn.tanx.com
@@ -587,6 +644,7 @@
 .clients1.google.com
 .clog.miguvideo.com
 .clouderrorreporting.googleapis.com
+.cloudflareinsights.com
 .cloudfront-labs.amazonaws.com
 .cloudpush.iqiyi.com
 .cm.baidu.com
@@ -621,9 +679,11 @@
 .concertads-configs.vox-cdn.com
 .conf.international.baidu.com
 .conf.wifi.360.cn
+.confiant.msn.com
 .config-api.internet.apps.samsung.com
 .config.ab.qq.com
 .config.uca.cloud.unity3d.com
+.connext-cdn.azureedge.net
 .consent.dropbox.com
 .contentpass.net
 .contentrecommend-out.mobile.sina.cn
@@ -1982,6 +2042,7 @@
 .data.intl.miui.com
 .data.mgtv.com
 .data.microsoft.com
+.data.msn.com
 .data.news.paypal.com
 .data.sec.intl.miui.com
 .data.service.paypal.com
@@ -1998,6 +2059,8 @@
 .dbcdqp72lzmvj.cloudfront.net
 .dbfu2bd09j3ln.cloudfront.net
 .dbfv8ylr8ykfg.cloudfront.net
+.dbm-metrics-intake.datadoghq.com
+.dbquery-intake.datadoghq.com
 .dbrpevozgux5y.cloudfront.net
 .dbujksp6lhljo.cloudfront.net
 .dbw7j2q14is6l.cloudfront.net
@@ -2146,6 +2209,7 @@
 .dlvds9i67c60j.cloudfront.net
 .dlxk2dj1h3e83.cloudfront.net
 .dm.bytedance.com
+.dm.pstatp.com
 .dm0acvguygm9h.cloudfront.net
 .dm0ly9ibqkdxn.cloudfront.net
 .dm0t14ck8pg86.cloudfront.net
@@ -2459,6 +2523,7 @@
 .flash.sec.intl.miui.com
 .flash.sec.miui.com
 .flashstats.libsyn.com
+.flex.msn.com
 .flipdish-cookie-consent.s3-eu-west-1.amazonaws.com
 .fm.qzone.qq.com
 .fodder.qq.com
@@ -2466,12 +2531,14 @@
 .fonts.googleapis.com
 .fourier.alibaba.com
 .fourier.taobao.com
+.fp-cdn.azureedge.net
 .fp.techinasia.com
 .fpa-api.arstechnica.com
 .fpa-cdn.arstechnica.com
 .fpa-events.arstechnica.com
 .fpt.microsoft.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
+.freewheel-mtgx-tv.akamaized.net
 .fs-client-logger.herokuapp.com
 .fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
 .fundingchoicesmessages.google.com
@@ -2482,9 +2549,11 @@
 .g.baidu.com
 .g.click.taobao.com
 .g.corp.163.com
+.g.msn.com
 .g.tbcdn.cn
 .g1.163.com
 .g1.corp.163.com
+.g2insights-cdn.azureedge.net
 .ga.clearbit.com
 .gak.webtoons.com
 .game-video.cdn.bcebos.com
@@ -2566,6 +2635,9 @@
 .h-adashx.ut.youku.com
 .h-adashx4ae.ut.taobao.com
 .h-adashx4yt.ut.taobao.com
+.h.msn.com
+.h1.msn.com
+.h2.msn.com
 .h5.mse.360.cn
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
@@ -2576,6 +2648,7 @@
 .hc.baidu.com
 .hdtu.oss-cn-beijing.aliyuncs.com
 .heoads.b-cdn.net
+.hesads.akamaized.net
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hits.theguardian.com
@@ -2684,6 +2757,7 @@
 .hwstats.unity3d.com
 .hybrid.miniapp.taobao.com
 .hydra.alibaba.com
+.hydro-ma-proxy.akamaized.net
 .hz.mmstat.com
 .hz.youku.com
 .i.paypal.com
@@ -2707,6 +2781,7 @@
 .iads.unity3d.com
 .iadsdk.apple.com
 .iadworkbench.apple.com
+.iam-rum-intake.datadoghq.com
 .ic.ksosoft.com
 .icelandclothing.myshopify.com
 .ichnaea-web.netflix.com
@@ -2799,6 +2874,7 @@
 .jiayi1.oss-cn-shanghai.aliyuncs.com
 .jiguang.cn
 .jingjia.qq.com
+.jioads.akamaized.net
 .jpg1.oss-cn-beijing.aliyuncs.com
 .jpush.cn
 .jpush.html5.qq.com
@@ -2828,6 +2904,7 @@
 .lc-push.zhihu.com
 .leak.360.cn
 .lf3-data.volccdn.com
+.lgforbes.akamaized.net
 .lgsmartad.com
 .lgtvcommon.com
 .lianmeng.360.cn
@@ -2839,6 +2916,7 @@
 .lmbsy.qq.com
 .lmsjy.qq.com
 .lnk0.com
+.loader-cdn.azureedge.net
 .location.ximalaya.com
 .log-auth.flysleep.cn
 .log-hl.snssdk.com
@@ -2881,6 +2959,7 @@
 .logs.amap.com
 .logs.appsource.microsoft.com
 .logs.blip.net
+.logs.datadoghq.com
 .logs.netflix.com
 .logsdk.qq.com
 .logssug.ucweb.com
@@ -2998,7 +3077,9 @@
 .mobile-pubt.ele.me
 .mobile.ximalaya.com
 .mobileads.google.com
+.mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
+.mobileleads.msn.com
 .mobilem.360.cn
 .mobilemsg.youku.com
 .mobopay.baidu.com
@@ -3019,6 +3100,7 @@
 .mqqad.html5.qq.com
 .mqqadr.reader.qq.com
 .mqtt.zhihu.com
+.msadsscale.azureedge.net
 .msg.iqiyi.com
 .msg.youku.com
 .msite.baidu.com
@@ -3057,6 +3139,7 @@
 .nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
+.ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
 .nl-rcd.iqiyi.com
 .nmetrics.samsung.com
@@ -3090,7 +3173,6 @@
 .onespot-tracking.herokuapp.com
 .onethingpcs.com
 .online-metrix.net
-.oogiri-ads-bucket.s3.ap-northeast-3.amazonaws.com
 .ope.tanx.com
 .opehs.tanx.com
 .open-hive-server-1.pp.ua
@@ -3108,6 +3190,7 @@
 .orbit.jd.com
 .os-mon.zijieapi.com
 .osfota.cdn.aliyun.com
+.otf.msn.com
 .oth.eve.qq.com
 .outlookads.live.com
 .outreach.crossref.org
@@ -3152,6 +3235,7 @@
 .partnerad.l.google.com
 .passport-log.youku.com
 .pay.mobile.sina.cn
+.pb3.pstatp.com
 .pbc.wsj.com
 .pc-mon.zijieapi.com
 .pc.uf.ksosoft.com
@@ -3201,12 +3285,14 @@
 .policy.video.iqiyi.com
 .popcashjs.b-cdn.net
 .popme.163.com
+.popup.msn.com
 .port.sec.miui.com
 .pos.baidu.com
 .pr.nss.netease.com
 .predataclient.b-cdn.net
 .presence.teams.live.com
 .presentationtracking.netflix.com
+.preview.msn.com
 .privacy-center.org
 .prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
@@ -3265,6 +3351,7 @@
 .qzs.qq.com
 .r.3hentai.net
 .r.mail.163.com
+.r.msn.com
 .r.release.qq.com
 .r1.visualwebsiteoptimizer.com
 .r2.visualwebsiteoptimizer.com
@@ -3273,6 +3360,8 @@
 .ra10.xyz
 .rad.live.com
 .rad.microsoft.com
+.rad.msn.com
+.rads.msn.com
 .rads.stackoverflow.com
 .rapid-glade-cde8.asoumare042024.workers.dev
 .rcgi.video.qq.com
@@ -3288,6 +3377,7 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
+.rel.msn.com
 .release.baidu.com
 .removeads.workers.dev
 .report-edge.agora.io
@@ -3314,6 +3404,8 @@
 .rj.baidu.com
 .rj.m.taobao.com
 .rm.sina.com.cn
+.rmads.eu.msn.com
+.rmads.msn.com
 .rmonitor.qq.com
 .robalmeister.workers.dev
 .roi.soulapp.cn
@@ -3337,6 +3429,7 @@
 .sa.sina.cn
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
+.sam.msn.com
 .sapi.sina.cn
 .saveeeee.myshopify.com
 .saveu5-normal-lq.zijieapi.com
@@ -3360,6 +3453,7 @@
 .scdown.qq.com
 .schemas.android.com
 .sclick.baidu.com
+.scorecardresearch.com
 .scribe.twitter.com
 .sd-tagging.azurefd.net
 .sdk.look.360.cn
@@ -3370,6 +3464,7 @@
 .sdkconfig.video.qq.com
 .sdkconfig.xiaomi.com
 .sdkinit.taobao.com
+.sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
 .seal.digicert.com
@@ -3457,6 +3552,7 @@
 .sp2.baidu.com
 .sp3.baidu.com
 .spcode.baidu.com
+.speee-ad.akamaized.net
 .spider-tracker.xiaohongshu.com
 .splashqqlive.gtimg.com
 .spoor-api.ft.com
@@ -3464,6 +3560,7 @@
 .spynet2.microsoft.com
 .spynetalt.microsoft.com
 .srd.simba.taobao.com
+.srtb.msn.com
 .ss-mndsrv.b-cdn.net
 .ssc.voacantonese.com
 .ssl-cdn.static.browser.mi-img.com
@@ -3493,6 +3590,7 @@
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
+.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static.alimama.com
 .static.g.iqiyi.com
@@ -3623,6 +3721,7 @@
 .token.safebrowsing.apple
 .tongji.baidu.com
 .toolbar.baidu.com
+.toolbar.msn.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -3662,6 +3761,7 @@
 .trafficfuelpixel.s3-us-west-2.amazonaws.com
 .trafficjunky.com
 .trafficjunky.net
+.trap.skype.com
 .trends.mobile.sina.cn
 .treverschmelerkris18.myshopify.com
 .trgfx.b-cdn.net
@@ -3690,6 +3790,7 @@
 .ucsec1.ucweb.com
 .ucstat.baidu.com
 .ucus.ucweb.com
+.udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
 .uedata.amazon.com
@@ -3740,6 +3841,7 @@
 .utp.ucweb.com
 .uu.qq.com
 .uvgxhu.ezgif.com
+.uz-analysis.akamaized.net
 .v.shopify.com
 .v9banners-com.cdn.ampproject.org
 .val.api.youku.com
@@ -3762,6 +3864,7 @@
 .view.zijieapi.com
 .virus-engine.sec.miui.com
 .vlive.qqvideo.tc.qq.com
+.voduscdn.azureedge.net
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
 .vs2.gzcu.u3.ucweb.com
@@ -3796,6 +3899,7 @@
 .website-security.rapidssl.com
 .webstat.ws.126.net
 .weishi.baidu.com
+.wheelioapp.azureedge.net
 .widget.weibo.com
 .win10.ipv6.microsoft.com
 .win1710.ipv6.microsoft.com
@@ -3865,6 +3969,7 @@
 .zhihu-web-analytics.zhihu.com
 .zhishituanyuanji.cdn.bcebos.com
 .zhstatic.zhihu.com
+.zmetrics.msn.com
 .znsv.baidu.com
 .zoosnet.net
 .zqtk.net
@@ -3929,6 +4034,7 @@ app.migc.xiaomi.com
 appgoad.189.cn
 appupdates.189.cn
 arms-retcode.aliyuncs.com
+audio-ak-spotify-com.akamaized.net
 awaken.amap.com
 awsusor0-cdn.fds-ssl.api.xiaomi.com
 baiducdncmn-gd.inter.iqiyi.com
