--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-29 09:27:02
-# Total rules: 4276
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-30 10:07:37
+# Total rules: 4293
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -236,6 +236,7 @@
 .adtrack.quark.cn
 .adtrack.uc.cn
 .adtrack.ucweb.com
+.adtrack.xiaojukeji.com
 .adv.app.qq.com
 .adv.sec.intl.miui.com
 .adv.sec.miui.com
@@ -365,6 +366,7 @@
 .api.miui.security.xiaomi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
+.api.optnmnstr.com
 .api.setting.intl.miui.com
 .api.shuaji.360.cn
 .api.sprig.com
@@ -435,6 +437,7 @@
 .baichuan-sdk.alicdn.com
 .baichuan-sdk.taobao.com
 .baichuan.baidu.com
+.baidustatic.com
 .baidutv.baidu.com
 .baifen.music.baidu.com
 .baikebcs.bdimg.com
@@ -2036,6 +2039,7 @@
 .data-sdk-uuid-log.d.meituan.net
 .data-sdk-uuid-report.dreport.meituan.net
 .data.bilibili.com
+.data.diagnostics.office.com
 .data.em2.cloudflare.com
 .data.fastlane-email.paypal.com
 .data.glbdns2.microsoft.com
@@ -2430,6 +2434,7 @@
 .e.qq.com
 .e045f561.b-cdn.net
 .e1.o.lencr.org
+.e20d8e38992b.o3n.io
 .easytomessage.com
 .ec2-44-233-143-239.us-west-2.compute.amazonaws.com
 .eclick.baidu.com
@@ -2833,6 +2838,7 @@
 .imgstat.baidu.com
 .improving.duckduckgo.com
 .imtt.qq.com
+.in.applicationinsights.azure.com
 .in.yimg.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3017,6 +3023,7 @@
 .mcs.zijieapi.com
 .mdevstat.qqlive.qq.com
 .mdt.qq.com
+.measure.office.com
 .media.globalsign.com
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
@@ -3087,6 +3094,7 @@
 .mon.snssdk.com
 .mon.zijieapi.com
 .monitor-frontend-collector.a.bybit-aws.com
+.monitor.azure.com
 .monitor.music.qq.com
 .monitor.qq.com
 .mostat.wps.cn
@@ -3165,6 +3173,7 @@
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .oimsgad.qq.com
+.omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
 .omni.istockphoto.com
@@ -3180,6 +3189,7 @@
 .openapi.guanjia.qq.com
 .openapi.samsung.com
 .openjmacs4uc.m.taobao.com
+.openmonitor.alipay-eco.com
 .openmonitor.alipay.com
 .openrcv.baidu.com
 .ophan.theguardian.com
@@ -3364,6 +3374,7 @@
 .rads.msn.com
 .rads.stackoverflow.com
 .rapid-glade-cde8.asoumare042024.workers.dev
+.raw.vidyard.com
 .rcgi.video.qq.com
 .rcm-images.amazon.com
 .rdstat.tanx.com
@@ -3592,6 +3603,7 @@
 .static-addtoany-com.cdn.ampproject.org
 .static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
+.static.addtoany.com
 .static.alimama.com
 .static.g.iqiyi.com
 .static.map.bdimg.com
@@ -3602,6 +3614,7 @@
 .statis.mobile.youku.com
 .statis.push.netease.com
 .statistic.qzone.qq.com
+.stats.addtoany.com
 .stats.miui.com
 .stats.paypal.com
 .stats.shopify.com
@@ -3741,6 +3754,7 @@
 .tracker.ai.xiaomi.com
 .tracker.baidu.com
 .tracker.dcdn.baidu.com
+.tracker.didistatic.com
 .tracker.downdetector.com
 .tracking.agora.io
 .tracking.americas.business.samsung.com
@@ -3853,6 +3867,7 @@
 .vhotwsh.video.qq.com
 .vibeaconstr.onezapp.com
 .video-ad.sm.cn
+.video-analytics-api.cloudinary.com
 .video-dsp.pddpic.com
 .video-stats.video.google.com
 .video.dispatch.tc.qq.com
@@ -3920,6 +3935,7 @@
 .wwads.cn
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4104,6 +4120,7 @@ gtms02.alicdn.com
 gtms03.alicdn.com
 gtms04.alicdn.com
 guanggaoad.youku.com
+hd.xiaojukeji.com
 hd.xiaomi.com
 hd02.lg.xiaomi.com
 hdj.baidu.com
