--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-30 10:07:37
-# Total rules: 4293
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-30 14:21:53
+# Total rules: 4305
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -468,6 +468,7 @@
 .beamanalytics.b-cdn.net
 .beizi.biz
 .bes-mtj.baidu.com
+.bestpush.pconline.com.cn
 .beyondwickedmapping.org
 .bgg.baidu.com
 .bigdata.ssp.samsung.com
@@ -702,6 +703,7 @@
 .corpext.msitadfs.glbdns2.microsoft.com
 .count.mail.163.com
 .count.video.sina.com.cn
+.count5.pconline.com.cn
 .counter.ksosoft.com
 .counter.sina.com.cn
 .cpoml.iask.sina.com.cn
@@ -2867,6 +2869,7 @@
 .irpmt.mail.163.com
 .isdspeed.qq.com
 .itsdata.map.baidu.com
+.ivy.pconline.com.cn
 .iwallet-1258175138.file.myqcloud.com
 .iwan-s.video.qq.com
 .iwanad.baidu.com
@@ -2957,6 +2960,9 @@
 .log3-misc-lq.amemv.com
 .log5-misc-lf.amemv.com
 .log5-misc-lq.amemv.com
+.logapi-and.zhipin.com
+.logapi-ios.zhipin.com
+.logapi.zhipin.com
 .logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
@@ -3281,6 +3287,7 @@
 .pixel.byspotify.com
 .pixel.condenastdigital.com
 .pixel.facebook.com
+.pixel.ipinfo.io
 .pixel.reddit.com
 .pixel.wp.com
 .pixiu.shangshufang.ksosoft.com
@@ -3663,6 +3670,7 @@
 .t.sj.qq.com
 .t.spot.im
 .t.uc.cn
+.t.zhipin.com
 .t10.baidu.com
 .t11.baidu.com
 .t12.baidu.com
@@ -3999,6 +4007,7 @@ ac.dun.163yun.com
 acfeedbackws.icloud.com
 acstatic-dun.126.net
 act.commercial.shouji.360.cn
+ad-analysis.pconline.com.cn
 ad-h5-cdn.soulapp.cn
 ad-h5-station-cdn.soulapp.cn
 ad-r.soulapp.cn
@@ -4137,11 +4146,13 @@ huodong.xiaomi.com
 huosai.xiaomi.com
 i.xiaomi.com
 iad.g.163.com
+iad0ssl.pconline.com.cn
 iadmat.nosdn.127.net
 iadmatapk.nosdn.127.net
 igame.xiaomi.com
 ilce.alicdn.com
 ime.api.xiaomi.com
+imgad0.pconline.com.cn
 inside.rtbasia.com
 insights.samsung.com
 is.snssdk.com
@@ -4210,6 +4221,7 @@ paopao-monitor.iqiyi.com
 pg-ad-b1.ws.126.net
 pg-ad-b2.ws.126.net
 phonecallapi.micloud.xiaomi.net
+ping.ifixit.com
 pl.youku.com
 pmall.migc.xiaomi.com
 pnrt-stsdk.vivo.com.cn
